<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    >

    <include
        layout="@layout/item_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:orientation="vertical"
            android:padding="20dp"
            android:weightSum="3">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="147dp"
                android:layout_weight="2.5"
                android:contentDescription="TODO"
                android:visibility="visible"
                android:src="@drawable/android"
                tools:ignore="ImageContrastCheck" />
            <TextView
                android:id="@+id/welcome_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:textSize="35sp"
                android:textAlignment="center"
                android:visibility="gone"
                android:text="Welcome new User!" />
            <TextView
                android:id="@+id/welcome_title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:textSize="20sp"
                android:textAlignment="center"
                android:visibility="gone"
                android:text="Please fill your personal information.\n" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/t_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/t_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/age" />

                <EditText
                    android:id="@+id/birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/t_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/height" />

                <EditText
                    android:id="@+id/height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/t_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/weight" />

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/t_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/sex" />

                <RadioGroup
                    android:id="@+id/r_group"
                    android:layout_width="match_parent"
                    android:layout_height="107dp">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="30dp"
                        android:text="@string/male"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="30dp"
                        android:text="@string/female"
                        tools:ignore="TouchTargetSizeCheck" />

                    <RadioButton
                        android:id="@+id/rb_other"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="30dp"
                        android:text="@string/other"
                        tools:ignore="TouchTargetSizeCheck" />
                </RadioGroup>

                <Button
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
